[ZR]repaired button and image gap

--- a/workspace/bootstrap-web-page/webpage.css
+++ b/workspace/bootstrap-web-page/webpage.css
@@ -8,6 +8,9 @@ body {
     width: 100%;
     font-family: Arial, Helvetica, sans-serif;
 }
+.gap{
+    padding:0;
+}
 
 /*heaer style*/
 .nav {
@@ -16,6 +19,11 @@ body {
     height: 96px;
     text-align: center;
     border-style: hidden;
+}
+.nav a{
+    color: #FFF;
+    text-decoration: none;
+    transition: 0.5s ease all;
 }
 
 .nav-content {
@@ -41,13 +49,15 @@ body {
     background: #444;
 }
 
-
 /*logo*/
 .logo-img {
     width: 50px;
     display: inline-block;
     padding:0;
     margin-top: -10px;
+    color: #FFF;
+    text-decoration: none;
+    transition: 0.5s ease all;
 
 }
 
@@ -85,6 +95,7 @@ body {
     display: inline;
     font-size: 28px;
     outline: none;
+    line-height:1;
 }
 
 .content-head {
@@ -105,8 +116,8 @@ body {
     display: block;
     width: 80px;
     margin-top: 25px;
-    margin-left: 150px;
     margin-bottom: 20px;
+    margin:auto;
 }
 
 .cartoon-text {
@@ -125,6 +136,8 @@ body {
     background-color: #EFEFEF;
     margin-top: 50px;
     margin-bottom: 30px;
+    margin-left: 0;
+    padding:0;
 
 }
 
